Refactor code structure for improved readability and maintainability

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -251,8 +251,8 @@
                 page-break-after: always;
                 display: flex !important;
             }
-            .navigation, .slide-counter, .notes-button, .notes {
-                display: none !important;
+            .navigation, .slide-counter, .notes-button {
+                display: none;
             }
         }
     </style>
